--- a/user-interface/src/styles/App.module.css
+++ b/user-interface/src/styles/App.module.css
@@ -7,3 +7,14 @@
 .form {
   width: 100%;
 }
+
+.section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section div:last-of-type {
+  border-bottom: 1px solid #000;
+}
